[gd_scene load_steps=24 format=3 uid="uid://b4pwrpvr3osgb"]

[ext_resource type="Script" uid="uid://bgdn2muft3ae8" path="res://Scenes/Main/parts/OS/OS.gd" id="1_rk64t"]
[ext_resource type="Texture2D" uid="uid://j2sk54heuc2t" path="res://Media/images/OS/bg_0.png" id="2_25k47"]
[ext_resource type="PackedScene" uid="uid://eqyg3c15y82h" path="res://Scenes/Main/parts/Background/Background.tscn" id="2_b50hp"]
[ext_resource type="PackedScene" uid="uid://cyjoo87vkcy0s" path="res://Scenes/Main/parts/OS/Options/Options.tscn" id="3_jsaqf"]
[ext_resource type="PackedScene" uid="uid://tcw2mmfv8vct" path="res://Scenes/Main/parts/OS/Taskbar/Taskbar.tscn" id="3_v00j4"]
[ext_resource type="PackedScene" uid="uid://dk5255oi6br8j" path="res://Components/TransitionScreen/TransistionScreen.tscn" id="5_b50hp"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="5_jsaqf"]
[ext_resource type="PackedScene" uid="uid://diewdd1a4yfp1" path="res://Components/BtnControls/BtnControls.tscn" id="6_b7tym"]
[ext_resource type="PackedScene" uid="uid://8hxxm66kio4n" path="res://Scenes/Main/parts/OS/Installer/Installer.tscn" id="6_dhnyo"]
[ext_resource type="PackedScene" uid="uid://cbwnq2nmqkgf0" path="res://Scenes/Main/parts/OS/LoginScreen/LoginScreen.tscn" id="6_tw6u7"]
[ext_resource type="PackedScene" uid="uid://clbcu7v8n62o8" path="res://Scenes/Main/parts/OS/Notification/Notification.tscn" id="7_mdufi"]
[ext_resource type="PackedScene" uid="uid://b3f8ve03806mt" path="res://Components/PauseContainer/PauseContainer.tscn" id="8_13atc"]
[ext_resource type="StyleBox" uid="uid://deoct5txhbuc8" path="res://Styles/OrangePanel.tres" id="8_fxpyd"]
[ext_resource type="PackedScene" uid="uid://dhkyb6t56c2fk" path="res://UI/Buttons/KeyBtn/KeyBtn.tscn" id="8_tw6u7"]
[ext_resource type="LabelSettings" uid="uid://gtflywuysx2d" path="res://Fonts/small_black_with_glow.tres" id="10_naebg"]
[ext_resource type="LabelSettings" uid="uid://pao66auopm3c" path="res://Fonts/font_2_black_large.tres" id="15_fxpyd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_41nkp"]

[sub_resource type="Shader" id="Shader_ei827"]
code = "shader_type canvas_item;

uniform float amplitude : hint_range(0.0, 50.0) = 20.0;
uniform float frequency : hint_range(0.0, 10.0) = 5.0;
uniform float speed : hint_range(0.0, 10.0) = 1.0;
uniform float opacity : hint_range(0.0, 1.0) = 1.0;
uniform int step_count : hint_range(1, 128) = 8; // Fewer steps = chunkier movement

void fragment() {
    float pixel_height = SCREEN_PIXEL_SIZE.y;

    // Get the screen-space Y coordinate in pixels
    float y_px = floor(FRAGCOORD.y);

    // Create a stepped wave based on scanline
    float wave = sin(y_px * frequency * 0.01 + TIME * speed);

    // Snap to step_count levels
    float stepped_wave = floor(wave * float(step_count)) / float(step_count);

    // Horizontal offset in pixels converted to UV
    float offset = stepped_wave * (amplitude * SCREEN_PIXEL_SIZE.x);

    vec2 distorted_uv = UV + vec2(offset, 0.0);

    vec4 tex_color = texture(TEXTURE, distorted_uv);
    tex_color.a *= opacity;

    COLOR = tex_color;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_25k47"]
shader = SubResource("Shader_ei827")
shader_parameter/amplitude = 21.29
shader_parameter/frequency = 0.5
shader_parameter/speed = 0.5
shader_parameter/opacity = 1.0
shader_parameter/step_count = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1wtgv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_25k47"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fxpyd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsaqf"]
bg_color = Color(1, 0.745178, 0.380506, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_offset = Vector2(0, 2)

[node name="OS" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_41nkp")
script = ExtResource("1_rk64t")

[node name="BG" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_25k47")
layout_mode = 2
texture = ExtResource("2_25k47")
expand_mode = 1

[node name="AudioVisualizer" parent="." instance=ExtResource("2_b50hp")]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="AudioVisualizer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 8
color = Color(0.0705882, 0.0705882, 0.0705882, 0.760784)

[node name="Desktop" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1wtgv")

[node name="MarginContainer" type="MarginContainer" parent="Desktop"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 120

[node name="DesktopGrid" type="GridContainer" parent="Desktop/MarginContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 6

[node name="PanelContainer" type="PanelContainer" parent="Desktop"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Control" type="Control" parent="Desktop/PanelContainer"]
layout_mode = 2

[node name="KeyBtn" parent="Desktop/PanelContainer/Control" instance=ExtResource("8_tw6u7")]
modulate = Color(1, 1, 1, 1)
layout_mode = 0
offset_left = -168.0
offset_top = 25.0
offset_right = -32.0
offset_bottom = 96.0
title = "TASKBAR"
assigned_key = "BACKSPACE"
icon = 67
is_flashing = true
hide_icon_panel = true
is_disabled = false

[node name="OptionsMenu" parent="." instance=ExtResource("3_jsaqf")]
visible = false
layout_mode = 2

[node name="Taskbar" parent="." instance=ExtResource("3_v00j4")]
z_index = 5
z_as_relative = false
layout_mode = 2

[node name="PauseContainer" parent="." instance=ExtResource("8_13atc")]
layout_mode = 2
use_transition = true

[node name="RunningAppsContainer" type="Control" parent="."]
layout_mode = 2

[node name="TransitionScreen" parent="." instance=ExtResource("5_b50hp")]
layout_mode = 2

[node name="LoginControl" type="Control" parent="."]
z_index = 10
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="LoginControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_25k47")

[node name="MarginContainer" type="MarginContainer" parent="LoginControl/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 35

[node name="PanelContainer" type="PanelContainer" parent="LoginControl/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("8_fxpyd")

[node name="MarginContainer" type="MarginContainer" parent="LoginControl/PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="LoginControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="IconBtn" parent="LoginControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("5_jsaqf")]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
icon = 3
static_color = Color(0, 0, 0, 1)
is_hoverable = false

[node name="Label" type="Label" parent="LoginControl/PanelContainer/MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "LOGGED IN AS SITE DIRECTOR"
label_settings = ExtResource("10_naebg")
vertical_alignment = 1

[node name="NodeControl" type="Control" parent="."]
layout_mode = 2

[node name="LoginContainer" parent="NodeControl" instance=ExtResource("6_tw6u7")]
visible = false
layout_mode = 1

[node name="NotificationContainer" parent="NodeControl" instance=ExtResource("7_mdufi")]
layout_mode = 1

[node name="Installer" parent="NodeControl" instance=ExtResource("6_dhnyo")]
layout_mode = 1

[node name="BtnControl" parent="." instance=ExtResource("6_b7tym")]
layout_mode = 2
offset = Vector2(5, 5)
a_btn_title = "SELECT"

[node name="HeaderControls" type="Control" parent="."]
z_index = 4
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HeaderControls"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fxpyd")

[node name="PanelContainer" type="PanelContainer" parent="HeaderControls/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Control" type="Control" parent="HeaderControls/PanelContainer/PanelContainer"]
layout_mode = 2

[node name="TaskbarCornerPanel" type="PanelContainer" parent="HeaderControls/PanelContainer/PanelContainer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -603.0
offset_top = -147.0
offset_right = 397.0
offset_bottom = 2.99997
grow_horizontal = 2
rotation = 0.785398
pivot_offset = Vector2(500, 250)
theme_override_styles/panel = SubResource("StyleBoxFlat_jsaqf")

[node name="MarginContainer" type="MarginContainer" parent="HeaderControls/PanelContainer/PanelContainer/Control/TaskbarCornerPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 35

[node name="Label" type="Label" parent="HeaderControls/PanelContainer/PanelContainer/Control/TaskbarCornerPanel/MarginContainer"]
layout_mode = 2
text = "OPEN
TASKBAR?"
label_settings = ExtResource("15_fxpyd")
horizontal_alignment = 1
